menambahkan beberapa event, yaitu event untuk bars dan event untuk icon X, dan memperbaiki event aksi di section 1

--- a/html/index.html
+++ b/html/index.html
@@ -30,12 +30,13 @@
     <div class="container-header">
         <div class="header">
             <div class="list-header">
+                <i class="fa-solid fa-x icon-x-list-header"></i>
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Service</a>
             </div>
-            <div class="bars-header">
-                <i class="fa-solid fa-bars"></i>
+            <div class="bars-header bars-header-hidden">
+                <i class="fa-solid fa-bars bars-header-i"></i>
             </div>
             <div class="title-header">
                 <h3 class="h3-title-header">Jadwalku</h3>
