menambahkan event untuk menghilangkan list bar

--- a/html/index.html
+++ b/html/index.html
@@ -31,9 +31,9 @@
         <div class="header">
             <div class="list-header">
                 <i class="fa-solid fa-x icon-x-list-header"></i>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Service</a>
+                <a href="#" class="a-list-header">Home</a>
+                <a href="#" class="a-list-header">About</a>
+                <a href="#" class="a-list-header">Service</a>
             </div>
             <div class="bars-header bars-header-hidden">
                 <i class="fa-solid fa-bars bars-header-i"></i>
