menambahkan section baru, yaitu section ke 2, dan menambahkan beberapa teks dan gambar

--- a/html/index.html
+++ b/html/index.html
@@ -52,6 +52,7 @@
             </div>
         </div>
     </div>
+    <!-- section 1 start-->
     <section class="section-1">
         <div class="text-section-1">
             <div class="title-section-1">
@@ -73,7 +74,40 @@
             <img src="../img/thumbnail.png" alt="thumbnail">
         </div>
     </section>
+    <!-- section 1 end -->
+    <!-- ///////////////////// -->
+    <!-- section 2 start-->
+    <section class="section-2">
+        <div class="container-img-title-section-2">
+            <div class="title-section-2">
+                <h2><span>Manfaat</span> Yang Di Dapat</h2>
+            </div>
+            <div class="img-section-2">
+                <img src="../img/img-section-2.png" alt="gambar-laptop">
+            </div>
+        </div>
+        <div class="text-section-2">
+            <p class="p-1-text-section-2">
+                Aplikasi pengatur jadwal tugas menawarkan berbagai manfaat signifikan bagi pengguna, terutama dalam hal
+                manajemen waktu dan produktivitas. Dengan fitur pengingat otomatis, pengguna dapat memastikan bahwa
+                mereka tidak melewatkan tenggat waktu penting, sehingga mengurangi stres dan meningkatkan efisiensi
+                kerja.
+            </p>
+            <p class="p-2-text-section-2">
+                Aplikasi ini juga memungkinkan pengguna untuk mengatur prioritas tugas, memantau kemajuan, dan
+                menyelaraskan jadwal mereka dengan lebih baik
+            </p>
+            <ul>
+                <li>Tingkatan produktivitas</li>
+                <li>Pengingat Otomatis</li>
+                <li>Catatan Dan Dokumentas</li>
+            </ul>
+        </div>
+    </section>
 
+
+
+    <!-- script js -->
     <script src="../js/main.js"></script>
 </body>
 
