membuat media query handphone untuk section 2, dan membuat section ke 3 dengan menambahkan beberapa teks dan gambar (setengah jadi)

--- a/html/index.html
+++ b/html/index.html
@@ -104,6 +104,62 @@
             </ul>
         </div>
     </section>
+    <!-- section end -->
+    <!-- ////////////////// -->
+    <!-- section 3 -->
+    <section class="section-3">
+        <div class="container-text-1">
+            <div class="text-1-section-3">
+                <h2>
+                    Pengingat Tugas
+                </h2>
+                <p class="p-1-text-1-section-3">
+                    01 / Task Reminder
+                </p>
+                <p class="p-2-text-1-section-3">
+                    Dapatkan notifikasi tentang tugas dan tenggat waktu yang akan datang.
+                </p>
+            </div>
+            <div class="text-2-section-3">
+                <h2>
+                    Manajemen
+                </h2>
+                <p class="p-1-text-2-section-3">
+                    03 / Task Management
+                </p>
+                <p class="p-2-text-2-section-3">
+                    Buat, atur, dan prioritaskan daftar tugasmu.
+                </p>
+            </div>
+        </div>
+        <div class="img-section-3">
+            <img src="../img/img-section-3.png" alt="gambar-handphone">
+        </div>
+        <div class="container-text-2">
+            <div class="text-1-section-3">
+                <h2>
+                    Antarmuka Menarik
+                </h2>
+                <p class="p-1-text-1-section-3">
+                    02 / Attractive Interface
+                </p>
+                <p class="p-2-text-1-section-3">
+                    Antarmuka aplikasi yang bisa di sesuaikan dengan gaya kamu.
+                </p>
+            </div>
+            <div class="text-2-section-3">
+                <h2>
+                    Kalender Akademik
+                </h2>
+                <p class="p-1-text-2-section-3">
+                    04 / Academic Calendar
+                </p>
+                <p class="p-2-text-2-section-3">
+                    Lihat dan kelola jadwalmu dengan mudah.
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
