memperbaiki section 3, mengatur posisi dan menambahkan beberapa warna

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <!-- font popins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <title>Jadwalku</title>
 </head>
 
@@ -111,7 +117,7 @@
         <div class="container-text-1">
             <div class="text-1-section-3">
                 <h2>
-                    Pengingat Tugas
+                    Pengingat <span>Tugas</span>
                 </h2>
                 <p class="p-1-text-1-section-3">
                     01 / Task Reminder
@@ -122,7 +128,7 @@
             </div>
             <div class="text-2-section-3">
                 <h2>
-                    Manajemen
+                    Manajemen <span>Tugas</span>
                 </h2>
                 <p class="p-1-text-2-section-3">
                     03 / Task Management
@@ -136,25 +142,25 @@
             <img src="../img/img-section-3.png" alt="gambar-handphone">
         </div>
         <div class="container-text-2">
-            <div class="text-1-section-3">
+            <div class="container-text-2-text-1-section-3">
                 <h2>
-                    Antarmuka Menarik
+                    Antarmuka <span>Menarik</span>
                 </h2>
-                <p class="p-1-text-1-section-3">
+                <p class="container-text-2-p-1-text-1-section-3">
                     02 / Attractive Interface
                 </p>
-                <p class="p-2-text-1-section-3">
+                <p class="container-text-2-p-2-text-1-section-3">
                     Antarmuka aplikasi yang bisa di sesuaikan dengan gaya kamu.
                 </p>
             </div>
-            <div class="text-2-section-3">
+            <div class="container-text-2-text-2-section-3">
                 <h2>
-                    Kalender Akademik
+                    Kalender <span>Akademik</span>
                 </h2>
-                <p class="p-1-text-2-section-3">
+                <p class="container-text-2-p-1-text-2-section-3">
                     04 / Academic Calendar
                 </p>
-                <p class="p-2-text-2-section-3">
+                <p class="container-text-2-p-2-text-2-section-3">
                     Lihat dan kelola jadwalmu dengan mudah.
                 </p>
             </div>
