memperbaiki media query handphone pada section 3, dan menambahsection 4 serta menambahkan beberapa judul, teks, dan input nama, email , pesan

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="container-search-unduh">
                 <div class="search-header">
-                    <input type="text" class="input-search-header" placeholder="Search">
+                    <input type="text" class="input-search-header" placeholder="Search" autofocus>
                     <i class="fa-solid fa-magnifying-glass icon-search-header" id="search-header"></i>
                 </div>
                 <div class=" unduh-header">
@@ -106,7 +106,7 @@
             <ul>
                 <li>Tingkatan produktivitas</li>
                 <li>Pengingat Otomatis</li>
-                <li>Catatan Dan Dokumentas</li>
+                <li>Catatan Dan Dokumentasi</li>
             </ul>
         </div>
     </section>
@@ -131,7 +131,7 @@
                     Manajemen <span>Tugas</span>
                 </h2>
                 <p class="p-1-text-2-section-3">
-                    03 / Task Management
+                    02/ Task Management
                 </p>
                 <p class="p-2-text-2-section-3">
                     Buat, atur, dan prioritaskan daftar tugasmu.
@@ -147,7 +147,7 @@
                     Antarmuka <span>Menarik</span>
                 </h2>
                 <p class="container-text-2-p-1-text-1-section-3">
-                    02 / Attractive Interface
+                    03 / Attractive Interface
                 </p>
                 <p class="container-text-2-p-2-text-1-section-3">
                     Antarmuka aplikasi yang bisa di sesuaikan dengan gaya kamu.
@@ -166,7 +166,70 @@
             </div>
         </div>
     </section>
-
+    <!-- section 3 end -->
+    <!-- ///////////////////////////// -->
+    <!-- section 4 -->
+    <section class="section-4">
+        <div class="text-section-4">
+            <div class="text-1-section-4">
+                <h1>
+                    Join Bersama <span>Kami</span> Sekarang!
+                </h1>
+                <p class="p-1-text-1-section-4">
+                    Telah diunduh oleh 10,000+ Pengguna
+                </p>
+                <p class="p-2-text-1-section-4">
+                    Kami Menjaga Jadwal Anda dan Kami Menjaga Privasi Anda.
+                </p>
+            </div>
+            <div class="text-2-section-4">
+                <div class="text-2-telepon">
+                    <h3>
+                        Nomor Telepon
+                    </h3>
+                    <p>
+                        +123-456-7890
+                    </p>
+                </div>
+                <div class="text-2-email">
+                    <h3>
+                        Alamat E-Mail
+                    </h3>
+                    <p>
+                        jadwalku.com
+                    </p>
+                </div>
+                <div class="text-2-website">
+                    <h3>
+                        website Resmi
+                    </h3>
+                    <a href="#">
+                        www.jadwalku.com
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="input-section-4">
+            <div class="input-nama-section-4">
+                <label for="input-nama">Nama Anda</label>
+                <input type="text" name="input-nama" id="input-nama" placeholder="Masukan nama Anda">
+            </div>
+            <div class="input-email-section-4">
+                <label for="input-email">Alamat E-mail Anda</label>
+                <input type="text" name="input-email" id="input-email" placeholder="Masukan Alamat E-mail Anda">
+            </div>
+            <div class="input-pesan-section-4">
+                <label for="input-pesan">Pesan Anda</label>
+                <textarea name="input-pesan" id="input-pesan" rows="10" placeholder="Masukan Pesan"></textarea>
+            </div>
+            <div class="button-section-4">
+                <button type="button">Kirim Pesan Anda</button>
+            </div>
+            <div class="a-section-4">
+                <a href="#">Unduh Buku Panduan</a>
+            </div>
+        </div>
+    </section>
 
 
     <!-- script js -->
