menambahkan background gambar, dan memperbaiki media query handphone untuk section 4

--- a/html/index.html
+++ b/html/index.html
@@ -38,8 +38,8 @@
             <div class="list-header">
                 <i class="fa-solid fa-x icon-x-list-header"></i>
                 <a href="#" class="a-list-header">Home</a>
-                <a href="#" class="a-list-header">About</a>
-                <a href="#" class="a-list-header">Service</a>
+                <a href="#halaman-informasi" class="a-list-header">About</a>
+                <a href="#halaman-kontak" class="a-list-header">Service</a>
             </div>
             <div class="bars-header bars-header-hidden">
                 <i class="fa-solid fa-bars bars-header-i"></i>
@@ -72,8 +72,8 @@
                 </p>
             </div>
             <div class="aksi-section-1">
-                <a href="#" class="a-aksi-section-1 a-aksi-section-1-hidden">Get Started</a>
-                <a href="#" class="a-aksi-section-1 a-aksi-section-1-hidden">Learn More</a>
+                <a href="#halaman-kontak" class="a-aksi-section-1 a-aksi-section-1-hidden">Get Started</a>
+                <a href="#halaman-fitur" class="a-aksi-section-1 a-aksi-section-1-hidden">Learn More</a>
             </div>
         </div>
         <div class="thumbnail-section-1">
@@ -83,7 +83,7 @@
     <!-- section 1 end -->
     <!-- ///////////////////// -->
     <!-- section 2 start-->
-    <section class="section-2">
+    <section class="section-2" id="halaman-informasi">
         <div class="container-img-title-section-2">
             <div class="title-section-2">
                 <h2><span>Manfaat</span> Yang Di Dapat</h2>
@@ -113,7 +113,7 @@
     <!-- section end -->
     <!-- ////////////////// -->
     <!-- section 3 -->
-    <section class="section-3">
+    <section class="section-3" id="halaman-fitur">
         <div class="container-text-1">
             <div class="text-1-section-3">
                 <h2>
@@ -209,7 +209,7 @@
                 </div>
             </div>
         </div>
-        <div class="input-section-4">
+        <div class="input-section-4" id="halaman-kontak">
             <div class="input-nama-section-4">
                 <label for="input-nama">Nama Anda</label>
                 <input type="text" name="input-nama" id="input-nama" placeholder="Masukan nama Anda">
