menambahkan fitur paralax (80%), pada section 1 dan header (100%)

--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
 <body>
     <!-- HEADER -->
     <div class="container-header">
-        <div class="header">
+        <div class="header" id="header">
             <div class="list-header">
                 <i class="fa-solid fa-x icon-x-list-header"></i>
                 <a href="#" class="a-list-header">Home</a>
