menambahkan efek paralax 10%

--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,7 @@
     <section class="section-2" id="halaman-informasi">
         <div class="container-img-title-section-2">
             <div class="title-section-2">
-                <h2><span>Manfaat</span> Yang Di Dapat</h2>
+                <h2 class="h-2-title-section-2"><span>Manfaat</span> Yang Di Dapat</h2>
             </div>
             <div class="img-section-2">
                 <img src="../img/img-section-2.png" alt="gambar-laptop">
