menambahkan efek paralax pada section 3, dan memperbaiki paralax pada section 2

--- a/html/index.html
+++ b/html/index.html
@@ -89,7 +89,7 @@
                 <h2 class="h-2-title-section-2"><span>Manfaat</span> Yang Di Dapat</h2>
             </div>
             <div class="img-section-2">
-                <img src="../img/img-section-2.png" alt="gambar-laptop">
+                <img src="../img/img-section-2.png" alt="gambar-laptop" class="element-img-section-2">
             </div>
         </div>
         <div class="text-section-2">
@@ -103,7 +103,7 @@
                 Aplikasi ini juga memungkinkan pengguna untuk mengatur prioritas tugas, memantau kemajuan, dan
                 menyelaraskan jadwal mereka dengan lebih baik
             </p>
-            <ul>
+            <ul class="ul-section-2">
                 <li>Tingkatan produktivitas</li>
                 <li>Pengingat Otomatis</li>
                 <li>Catatan Dan Dokumentasi</li>
@@ -116,7 +116,7 @@
     <section class="section-3" id="halaman-fitur">
         <div class="container-text-1">
             <div class="text-1-section-3">
-                <h2>
+                <h2 class="h2-text-1-section-3">
                     Pengingat <span>Tugas</span>
                 </h2>
                 <p class="p-1-text-1-section-3">
@@ -127,7 +127,7 @@
                 </p>
             </div>
             <div class="text-2-section-3">
-                <h2>
+                <h2 class="h2-text-2-section-3">
                     Manajemen <span>Tugas</span>
                 </h2>
                 <p class="p-1-text-2-section-3">
@@ -139,11 +139,11 @@
             </div>
         </div>
         <div class="img-section-3">
-            <img src="../img/img-section-3.png" alt="gambar-handphone">
+            <img src="../img/img-section-3.png" alt="gambar-handphone" class="content-img-section-3">
         </div>
         <div class="container-text-2">
             <div class="container-text-2-text-1-section-3">
-                <h2>
+                <h2 class="container-text-2-h2-section-3">
                     Antarmuka <span>Menarik</span>
                 </h2>
                 <p class="container-text-2-p-1-text-1-section-3">
@@ -154,7 +154,7 @@
                 </p>
             </div>
             <div class="container-text-2-text-2-section-3">
-                <h2>
+                <h2 class="container-text-2-text-2-h2-section-3">
                     Kalender <span>Akademik</span>
                 </h2>
                 <p class="container-text-2-p-1-text-2-section-3">
