menyelesaikan paralax pada section 3 dan 4 , serta memperbaiki beberapa bug yg terjadi

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
                 <i class="fa-solid fa-x icon-x-list-header"></i>
                 <a href="#" class="a-list-header">Home</a>
                 <a href="#halaman-informasi" class="a-list-header">About</a>
-                <a href="#halaman-kontak" class="a-list-header">Service</a>
+                <a href="#" class="a-list-header">Service</a>
             </div>
             <div class="bars-header bars-header-hidden">
                 <i class="fa-solid fa-bars bars-header-i"></i>
