--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="thumbnail-section-1">
-            <img src="../img/thumbnail.png" alt="thumbnail">
+            <img src="/img/thumbnail.png" alt="thumbnail">
         </div>
     </section>
     <!-- section 1 end -->
@@ -89,7 +89,7 @@
                 <h2 class="h-2-title-section-2"><span>Manfaat</span> Yang Di Dapat</h2>
             </div>
             <div class="img-section-2">
-                <img src="../img/img-section-2.png" alt="gambar-laptop" class="element-img-section-2">
+                <img src="/img/img-section-2.png" alt="gambar-laptop" class="element-img-section-2">
             </div>
         </div>
         <div class="text-section-2">
@@ -139,7 +139,7 @@
             </div>
         </div>
         <div class="img-section-3">
-            <img src="../img/img-section-3.png" alt="gambar-handphone" class="content-img-section-3">
+            <img src="/img/img-section-3.png" alt="gambar-handphone" class="content-img-section-3">
         </div>
         <div class="container-text-2">
             <div class="container-text-2-text-1-section-3">
@@ -233,7 +233,7 @@
 
 
     <!-- script js -->
-    <script src="../js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
